# yul-easycrypt

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
src/data_structures/: mod.rs
src/data_structures/environment/: mod.rs  stack_impl.rs
src/easycrypt/: mod.rs  printer.rs  visitor.rs
src/easycrypt/path/: builder.rs  mod.rs  step.rs
src/easycrypt/path/tracker/: mod.rs
src/easycrypt/syntax/: definition.rs  function.rs  mod.rs  proc.rs  reference.rs  signature.rs
src/easycrypt/syntax/expression/: binary.rs  call.rs  mod.rs  unary.rs
src/easycrypt/syntax/module/: definition.rs  mod.rs
src/easycrypt/syntax/statement/: call.rs  mod.rs
src/easycrypt/syntax/type/: effect.rs  mod.rs
src/easycrypt/translator/: code.rs  config.rs  function.rs  mod.rs  object.rs  standard_definitions.rs  type.rs
src/easycrypt/translator/context/: easycrypt.rs  mod.rs  yul.rs
src/easycrypt/translator/expression/: context.rs  function_call.rs  identifier.rs  literal.rs  mod.rs
src/easycrypt/translator/pass/: mod.rs  name_sanitizer.rs
src/easycrypt/translator/state/: definition_info.rs  definition_location.rs  mod.rs  name_generator.rs
src/easycrypt/translator/statement/: assignment.rs  block.rs  (+5 more)
src/util/: iter.rs  mod.rs  num.rs
src/yul/: mod.rs
src/yul-easycrypt/: arguments.rs  main.rs
src/yul/analyzers/: calling_dependencies.rs  collect_definitions.rs  mod.rs
src/yul/path/: builder.rs  full_name.rs  lexical_scope.rs  mod.rs  symbol_table.rs
src/yul/visitor/: statements.rs
tests/: mod.rs
tests/easycrypt/: mod.rs
tests/easycrypt/translator/: mod.rs
(+10 files in other folders)
