[package]
name = "yul-easycrypt"
version = "1.0.0"

authors = [
    "Igor Zhirkov <iz@matterlabs.dev>",
]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Transpiler from YUL to EasyCrypt"

[[bin]]
name = "yul-easycrypt"
path = "src/yul-easycrypt/main.rs"

[lib]
doctest = false

[dependencies]
structopt = { version = "0.3", default-features = false }
colored = "2.1"
thiserror = "1.0"
anyhow = "1.0"
which = "5.0"
path-slash = "0.2"
rayon = "1.8"

serde = { version = "1.0", "features" = [ "derive" ] }
serde_json = { version = "1.0", features = [ "arbitrary_precision" ] }
semver = { version = "1.0", features = [ "serde" ] }
once_cell = "1.19"
rand = "0.8"
regex = "1.9"
hex = "0.4"
num = "0.4"
topological-sort = "0.2.2"

ethereum-types = "0.14.1"

era-yul = { git = "https://github.com/matter-labs/era-compiler-solidity", branch = "main" }

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { version = "*", default-features = false }

[patch."https://github.com/matter-labs/era-compiler-solidity"]
era-yul = { path = "../era-compiler-solidity-workspace/era-yul", relative = "true" }
